<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.playground</groupId>
    <artifactId>java</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0</version>

    <modules>
        <module>modules/devskiller_jfairy</module>
        <module>modules/eclipse_jgit</module>
        <module>modules/fasterxml_jackson-annotations</module>
        <module>modules/gmessner_gitlab4j-api</module>
        <module>modules/google_guice</module>
        <module>modules/hcoles_pitest</module>
        <module>modules/hibernate_hibernate-orm</module>
        <module>modules/j-easy_easy-batch</module>
        <module>modules/java_se</module>
        <module>modules/java_javax</module>
        <module>modules/jhalterman_failsafe</module>
        <module>modules/jodaorg_joda-money</module>
        <module>modules/jodaorg_joda-time</module>
        <module>modules/mockito_mockito</module>
        <module>modules/modelmapper_modelmapper</module>
        <module>modules/openl-tablets_openl-tablets</module>
        <module>modules/reactor_reactor-core</module>
        <module>modules/rest-assured_rest-assured</module>
        <module>modules/seleniumhq_selenium</module>
        <module>modules/spring-projects_spring-data-jpa</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.0-alpha1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>2.0.0-alpha1</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.12.2</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.4.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.4.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.4.2</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>14</source>
                    <target>14</target>
                    <release>14</release>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                    <systemPropertyVariables>
                        <webdriver.chrome.driver>
                            ${project.basedir}/drivers/${webdriver.chrome.driver.binary}
                        </webdriver.chrome.driver>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <rulesUri>file:///${session.executionRootDirectory}/rules.xml</rulesUri>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
